# vibe-smtp

./: .env.example  Cargo.toml  DOCKER.md  Dockerfile  MIGRATION.md  README.md  SMTP-DOCS.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  basic_test.sh  debug-cargo.sh  docker-compose.yml  docker-run.sh  justfile  test-docker-multiport.sh  test-lock.sh  test.sh  test_attachment.py  test_cert.pem  test_key.pem  test_smtp.py
.config/: nextest.toml
.github/workflows/: ci.yml
src/: cli.rs  compression.rs  connection.rs  lib.rs  mailpace.rs  main.rs  mime.rs  smtp.rs  tls.rs
tests/: common.rs  html_compression_tests.rs  integration_tests.rs  mailpace_tests.rs  performance_tests.rs
