[package]
name = "vibe-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "vibe_gateway"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
lettre = "0.11"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
